; ModuleID = '/home/carl/AnghaBench/curl/tests/libtest/extr_first.c_select_wrapper.c'
source_filename = "/home/carl/AnghaBench/curl/tests/libtest/extr_first.c_select_wrapper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i64 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @select_wrapper(i32 %0, i32* %1, i32* %2, i32* %3, %struct.timeval* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.timeval*, align 8
  store i32 %0, i32* %7, align 4
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store %struct.timeval* %4, %struct.timeval** %11, align 8
  %12 = load i32, i32* %7, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %5
  %15 = load i32, i32* @EINVAL, align 4
  %16 = call i32 @SET_SOCKERRNO(i32 %15)
  store i32 -1, i32* %6, align 4
  br label %24

17:                                               ; preds = %5
  %18 = load i32, i32* %7, align 4
  %19 = load i32*, i32** %8, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = load i32*, i32** %10, align 8
  %22 = load %struct.timeval*, %struct.timeval** %11, align 8
  %23 = call i32 @select(i32 %18, i32* %19, i32* %20, i32* %21, %struct.timeval* %22)
  store i32 %23, i32* %6, align 4
  br label %24

24:                                               ; preds = %17, %14
  %25 = load i32, i32* %6, align 4
  ret i32 %25
}

declare dso_local i32 @SET_SOCKERRNO(i32) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, %struct.timeval*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
